objects/Apttus_Approval__AdhocApprovalProcess__c.object
<CustomObject>
    <description>Defines adhoc approval process information for a specific business object</description>
    <fields>
        <fullName>Apttus_Approval__AttachmentIds__c</fullName>
        <label>Attachment Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectId__c</fullName>
        <label>Business Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectType__c</fullName>
        <label>Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DisplayFields__c</fullName>
        <label>Display Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DisplayHeaderFields__c</fullName>
        <label>Display Header Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessComments__c</fullName>
        <label>Process Comments</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>Adhoc Approval Process</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__BusinessObjectType__c</columns>
        <columns>Apttus_Approval__BusinessObjectId__c</columns>
        <columns>Apttus_Approval__DisplayFields__c</columns>
        <columns>Apttus_Approval__DisplayHeaderFields__c</columns>
        <columns>Apttus_Approval__AttachmentIds__c</columns>
        <columns>Apttus_Approval__ProcessComments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_AdhocApprovalProcess</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Approval Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>